src/main/java/com/example/demo/entity/error/ModelError.java
package com.example.demo.entity.error;

public enum ModelError {
	ID_REQUIRED, MODEL_REQUIRED,  MODEL_ALREADY_EXISTS, MODEL_CONSTRAINT_VIOLATION,MODEL_DATA_INTEGRITY_VIOLATION;


}
